--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "322a649f",
+   "id": "cd170c6a",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8d2af760",
+   "id": "2fce5350",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b3626389",
+   "id": "065090c9",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71d4f79d",
+   "id": "bdc58c65",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b09a47c6",
+   "id": "e3bc67d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "02515014",
+   "id": "f76888a7",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9f1a5abc",
+   "id": "4825b5ea",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58a5b9cd",
+   "id": "0e528ea5",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e39c9e44",
+   "id": "d72cd0fb",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "80a36662",
+   "id": "b484f83d",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "83b24051",
+   "id": "2eb678e3",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41ad7772",
+   "id": "1f5ce589",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "73702d4f",
+   "id": "5346dd84",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8984f2ee",
+   "id": "dfa668d4",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7b1697c",
+   "id": "231ad7a8",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b64bc9bb",
+   "id": "7e94a218",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f9254507",
+   "id": "f73636ce",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f51643e7",
+   "id": "83a7e40e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0204b3b1",
+   "id": "f3b91b81",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f714a998",
+   "id": "b9723d93",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6eb4e9fe",
+   "id": "51215337",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4b5bdf98",
+   "id": "d9944015",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7b8a3628",
+   "id": "99dba808",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed7f1be4",
+   "id": "ebcfff7b",
    "metadata": {},
    "source": [
     "# Four ways to `import`:\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bad6a6e",
+   "id": "42c700fd",
    "metadata": {},
    "source": [
     "# Exercise: Filenames that match\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9edb1f1e",
+   "id": "72a0a675",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a0af3c01",
+   "id": "c6cb7602",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "272fe6dc",
+   "id": "9e5194c0",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c7fbaea4",
+   "id": "b61921f4",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "834f33ae",
+   "id": "a4c67fb7",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cd136d5",
+   "id": "efa5ab68",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "95afa7da",
+   "id": "ec1b3400",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "37b18fb7",
+   "id": "9978279b",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a8906af2",
+   "id": "91a820f2",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6da39d0e",
+   "id": "9c8d78f4",
    "metadata": {},
    "source": [
     "# What's in a module?\n",
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f68a3de4",
+   "id": "31a6922a",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c5db51f",
+   "id": "b60d0e86",
    "metadata": {},
    "source": [
     "# Unusual attribute names\n",
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3c626189",
+   "id": "3c88ce5e",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5a413c6b",
+   "id": "bbc19407",
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c5aab0b9",
+   "id": "a6ee56a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "70cce148",
+   "id": "11f7eba4",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a360411c",
+   "id": "a3fbfd7a",
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d0294a",
+   "id": "b0171a9e",
    "metadata": {},
    "source": [
     "# Some of the dunder attributes on every module\n",
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "55267ef3",
+   "id": "89333234",
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "929faf2a",
+   "id": "a0b46cf9",
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "91b0e58a",
+   "id": "9a657d46",
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "035115c2",
+   "id": "48970b39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a8f55bc3",
+   "id": "1b5d1d69",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a0f43146",
+   "id": "03fddf16",
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "a631b709",
+   "id": "f109fd9d",
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "535a9034",
+   "id": "79eba4e2",
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "16e8c159",
+   "id": "e3e22406",
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "0b69c3f6",
+   "id": "e489980d",
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd0839ce",
+   "id": "7bb7c756",
    "metadata": {},
    "source": [
     "# Exercise: Menu\n",
@@ -1864,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "7a3d8e1c",
+   "id": "21517ded",
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a427fa56",
+   "id": "3e194119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d1a4e3b7",
+   "id": "e383bde1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1922,7 +1922,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "8cf425e7",
+   "id": "36739eb7",
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "43b58f29",
+   "id": "f0b8dcc4",
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1964,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "f06f22ce",
+   "id": "a6b6ff76",
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1985,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "fc36b2df",
+   "id": "fcd4cbc0",
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d76e447f",
+   "id": "f51f528a",
    "metadata": {},
    "source": [
     "# Attributes vs. globals\n",
@@ -2028,7 +2028,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "0d4d48dc",
+   "id": "6162759c",
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42d1bcac",
+   "id": "b1723e56",
    "metadata": {},
    "source": [
     "# `__name__` can have two values\n",
@@ -2071,7 +2071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82f2ee89",
+   "id": "4bff548e",
    "metadata": {},
    "source": [
     "# `__name__` and `'__main__'`\n",
@@ -2091,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "9cded558",
+   "id": "142503a2",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "536abf13",
+   "id": "30ce1bbc",
    "metadata": {},
    "outputs": [
     {
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f10e20e",
+   "id": "64560984",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2147,7 +2147,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "23ab4462",
+   "id": "4a074b0d",
    "metadata": {
     "collapsed": true
    },
@@ -2328,7 +2328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32b47dec",
+   "id": "416e0f72",
    "metadata": {},
    "source": [
     "# Exercise: File size\n",
@@ -2342,7 +2342,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "142a81b5",
+   "id": "68b33b67",
    "metadata": {},
    "outputs": [
     {
@@ -2365,7 +2365,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "838342f8",
+   "id": "07a0b668",
    "metadata": {},
    "outputs": [
     {
@@ -2386,7 +2386,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "10e2f512",
+   "id": "09aea6f9",
    "metadata": {},
    "outputs": [
     {
@@ -2426,7 +2426,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "6840f959",
+   "id": "66123898",
    "metadata": {},
    "outputs": [
     {
@@ -2460,7 +2460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4de3b25e",
+   "id": "36037513",
    "metadata": {},
    "source": [
     "# Beyond the standard library\n",
@@ -2478,7 +2478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeb51273",
+   "id": "eeca348c",
    "metadata": {},
    "source": [
     "# Exercise: Colorize text\n",
@@ -2492,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d9a33e2",
+   "id": "f6171200",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2504,7 +2504,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "13abc7b8",
+   "id": "6ba56c84",
    "metadata": {},
    "outputs": [
     {
@@ -2537,7 +2537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bfea2b6",
+   "id": "26286d4f",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2548,7 +2548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b347be62",
+   "id": "eada70a1",
    "metadata": {},
    "source": [
     "# Next steps in improving your Python skills\n",
@@ -2571,7 +2571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ded5cc5",
+   "id": "c76a4095",
    "metadata": {},
    "source": [
     "# \"No module\" potential fixes\n",
@@ -2585,7 +2585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d90c6773",
+   "id": "07d6e9e5",
    "metadata": {},
    "source": [
     "Awesome Python site: awesome-python.com"
@@ -2594,7 +2594,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "eb907d8c",
+   "id": "d9568701",
    "metadata": {},
    "outputs": [
     {
@@ -2618,7 +2618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81442e29",
+   "id": "9d7b773c",
    "metadata": {},
    "source": [
     "# Finding me\n",
@@ -2633,13 +2633,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1843328",
+   "id": "41a8f333",
    "metadata": {},
    "source": [
     "# Data science packages\n",
     "\n",
-    "Ty"
+    "Typically, people interested in data science download:\n",
+    "\n",
+    "- NumPy\n",
+    "- Pandas\n",
+    "- Matplotlib\n",
+    "- (maybe) sklearn \n",
+    "\n",
+    "All of these are available on PyPI."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceed9179",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
